htcondor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: htcondor
  name: htcondor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: htcondor
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: htcondor
    spec:
      containers:
        - image: steven0414/htcondor
          name: htcondor
          ports:
            - containerPort: 10389
            - containerPort: 22
            - containerPort: 9618
          resources: {}
          volumeMounts:
            - mountPath: /app
              name: uchuva
      restartPolicy: Always
      volumes:
        - name: uchuva
          persistentVolumeClaim:
            claimName: uchuva
status: {}
