slurm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: slurm
  name: slurm
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: slurm
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: slurm
    spec:
      containers:
        - image: agaveapi/slurm
          name: slurm
          ports:
            - containerPort: 22
            - containerPort: 10389
            - containerPort: 6817
            - containerPort: 6818
          resources: {}
          volumeMounts:
            - mountPath: /app
              name: uchuva
      hostname: docker.example.com
      restartPolicy: Always
      volumes:
        - name: uchuva
          persistentVolumeClaim:
            claimName: uchuva
status: {}
