torque-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: torque
  name: torque
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: torque
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: torque
    spec:
      containers:
        - image: agaveapi/torque
          name: torque
          ports:
            - containerPort: 22
            - containerPort: 10389
            - containerPort: 9618
          resources: {}
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /app
              name: uchuva
      hostname: docker
      restartPolicy: Always
      volumes:
        - name: uchuva
          persistentVolumeClaim:
            claimName: uchuva
status: {}
