uchuva-index-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
    kompose.service.type: nodeport
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: uchuva-index
  name: uchuva-index
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: uchuva-index
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
        kompose.service.type: nodeport
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: uchuva-index
    spec:
      containers:
      - env:
        - name: BMANAGER
          value: "3"
        - name: CONDOR_JOB_OWNER
          value: uchuva
        - name: CONDOR_URL
          value: http://htcondor:8080/
        - name: QUEUE
          value: amqp://user:password@rabbit
        - name: SHARE
          value: /app
        image: steven0414/uchuva_index
        imagePullPolicy: ""
        name: uchuva-index
        ports:
        - containerPort: 3000
        resources: {}
        volumeMounts:
        - mountPath: /app
          name: uchuva
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: uchuva
        persistentVolumeClaim:
          claimName: uchuva
status: {}
