uchuvaworker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: uchuvaworker
  name: uchuvaworker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: uchuvaworker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: uchuvaworker
    spec:
      containers:
        - args:
            - npm
            - run
            - worker
          image: steven0414/uchuva
          name: uchuvaworker
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /app
              name: uchuva
      restartPolicy: Always
      volumes:
        - name: uchuva
          persistentVolumeClaim:
            claimName: uchuva
status: {}
