htcondor-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: htcondor
  name: htcondor
spec:
  ports:
  - name: "10389"
    port: 10389
    targetPort: 10389
  - name: "22"
    port: 22
    targetPort: 22
  - name: "9618"
    port: 9618
    targetPort: 9618
  selector:
    io.kompose.service: htcondor
status:
  loadBalancer: {}
