rabbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbit
  name: rabbit
spec:
  ports:
    - name: "5672"
      port: 5672
      targetPort: 5672
    - name: "15671"
      port: 15671
      targetPort: 15671
    - name: "15672"
      port: 15672
      targetPort: 15672
    - name: "15691"
      port: 15691
      targetPort: 15691
    - name: "15692"
      port: 15692
      targetPort: 15692
    - name: "25672"
      port: 25672
      targetPort: 25672
    - name: "4369"
      port: 4369
      targetPort: 4369
    - name: "5671"
      port: 5671
      targetPort: 5671
  selector:
    io.kompose.service: rabbit
status:
  loadBalancer: {}
