slurm-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: slurm
  name: slurm
spec:
  ports:
    - name: "22"
      port: 22
      targetPort: 22
    - name: "10389"
      port: 10389
      targetPort: 10389
    - name: "6817"
      port: 6817
      targetPort: 6817
    - name: "6818"
      port: 6818
      targetPort: 6818
  selector:
    io.kompose.service: slurm
status:
  loadBalancer: {}
