torque-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: torque
  name: torque
spec:
  ports:
    - name: "22"
      port: 22
      targetPort: 22
    - name: "10389"
      port: 10389
      targetPort: 10389
    - name: "9618"
      port: 9618
      targetPort: 9618
  selector:
    io.kompose.service: torque
status:
  loadBalancer: {}
